yc-sirius/test-edu-goofy-allen/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
  namespace: edu-goofy-allen
  labels:
    name: web-server
spec:
  containers:
  - name: web-server
    image: nginx:1.14.2
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
