yc-sirius/test-edu-goofy-allen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: edu-goofy-allen
spec:
  selector:
    app: web-server
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30351
    protocol: TCP
